   'sip show peers'.
 * Added Advice-Of-Charge events (AOC-S, AOC-D, and AOC-E) in the new
   aoc event class.
 * Added Advice-Of-Charge manager action, AOCMessage, for generating AOC-D and
   AOC-E messages on a channel.
 * A DBGetComplete event now follows a DBGetResponse, to make the DBGet action
   conform more closely to similar events.

Channel Event Logging
---------------------
 * A new interface, CEL, is introduced here. CEL logs single events, much like
   the AMI, but it differs from the AMI in that it logs to db backends much
   like CDR does; is based on the event subsystem introduced by Russell, and
   can share in all its benefits; allows multiple backends to operate like CDR;
   is specialized to event data that would be of concern to billing sytems,
   like CDR. Backends for logging and accounting calls have been produced,
   but a new CDR backend is still in development.

CDR
---
 * 'linkedid' and 'peeraccount' are new CDR fields available to CDR aficionados.
   linkedid is based on uniqueID, but spreads to other channels as transfers, dials,
   etc are performed. Thus the pieces of CDR can be grouped into multilegged sets.
 * Multiple files and formats can now be specified in cdr_custom.conf.
 * cdr_syslog has been added which allows CDRs to be written directly to syslog.
   See configs/cdr_syslog.conf.sample for more information.
 * A 'sequence' field has been added to CDRs which can be combined with
   linkedid or uniqueid to uniquely identify a CDR.
 * Handling of billsec and duration field has changed. If your table definition
   specifies those fields as float,double or similar they will now be logged with
   microsecond accuracy instead of a whole integer.

Calendaring for Asterisk
------------------------
 * A new set of modules were added supporing calendar integration with Asterisk.
   Dialplan functions for reading from and writing to calendars are included,